# lovely-rs

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml  deploy.yml
crates/lovely-data/: Cargo.toml  README.md
crates/lovely-data/src/: main.rs
crates/lovely-db/: Cargo.toml  README.md
crates/lovely-db/src/: apps.rs  collections.rs  elements.rs  errors.rs  intent.rs  lib.rs  oauth.rs  pages.rs  pg.rs  revisions.rs  schema_service.rs  sessions.rs  sqlite_store.rs  users.rs
crates/lovely-db/tests/: local_sqlite_store.rs  pg_smoke.rs  schema_service.rs  users.rs
crates/lovely-server/: Cargo.toml  README.md
crates/lovely-server/src/: main.rs
crates/lovely-test-support/: Cargo.toml  README.md
crates/lovely-test-support/src/: lib.rs
crates/lovely-tree/: Cargo.toml  README.md
crates/lovely-tree/benches/: tree.rs
crates/lovely-tree/src/: arena.rs  attrs.rs  build.rs  errors.rs  iter.rs  lib.rs  render.rs  tags.rs  types.rs
crates/lovely-web/: Cargo.toml  README.md  build.rs
crates/lovely-web/src/: errors.rs  lib.rs  router.rs  state.rs
crates/lovely-web/src/auth/: csrf.rs  extractor.rs  mod.rs  password.rs
crates/lovely-web/src/handlers/: apps.rs  auth_username.rs  builder.rs  data.rs  elements.rs  health.rs  home.rs  mod.rs  pages.rs
crates/lovely-web/src/views/: apps.rs  auth.rs  builder.rs  components.rs  data.rs  mod.rs  pages.rs  shell.rs
crates/lovely-web/tests/: apps_crud.rs  auth_username.rs  binding_preview.rs  builder.rs  coll_types.rs  form_auto_wire.rs  inspector_polish.rs  inspector_tabs.rs  interpolation.rs  logout.rs  parity.rs  publish_and_home.rs  publishing.rs  refresh.rs  repeat_ui.rs  select_after_add.rs  sidebar.rs  sql_console.rs  sqlite_mirror.rs  subnav.rs  undo_redo.rs
deploy/: .dockerignore  Dockerfile  README.md  compose.yaml  entrypoint.sh
deploy/k8s/: deployment.yaml  ingress.yaml  postgres.yaml  pvc.yaml  secret.yaml  service.yaml
docs/: codebase-tour.md  rust-notes.md
docs/plans/: 2026-05-05-lovely-rs-design.md  2026-05-05-milestone-a-static-cms.md  oauth-github-google.md
migrations/: 20260505000001_users.up.sql  20260505000002_oauth_identities.up.sql  20260505000003_sessions.down.sql  20260505000003_sessions.up.sql  20260505000004_pages.up.sql  20260505000005_elements.down.sql  20260505000005_elements.up.sql  20260505000006_apps.down.sql  20260505000006_apps.up.sql  20260505000007_collections.down.sql  20260505000007_collections.up.sql  20260505000008_revisions.down.sql  20260505000008_revisions.up.sql  20260505000009_theme_and_head.down.sql  20260505000009_theme_and_head.up.sql  20260505000010_publish_user_app.down.sql  20260505000010_publish_user_app.up.sql  20260505000011_app_schema_migrations.down.sql  20260505000011_app_schema_migrations.up.sql
static/: style.css  tree.js
static/fonts/: SOURCE.md
