[package]
name = "lovely-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lovely-tree = { path = "../lovely-tree" }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
lovely-test-support = { path = "../lovely-test-support" }
anyhow = { workspace = true }
