[package]
name = "lovely-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lovely-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
lovely-db = { path = "../lovely-db" }
lovely-web = { path = "../lovely-web" }
