[package]
name = "lovely-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "lovely-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
secrecy = { workspace = true }
# `systemfd` (a CLI sibling of this crate) hands us an already-bound
# listening socket via env vars on every rebuild, so the browser never
# sees "connection refused" between restarts. No-op when the env var
# is absent (i.e. in production).
listenfd = "1"
lovely-db = { path = "../lovely-db" }
lovely-web = { path = "../lovely-web" }
