[package]
name = "lovely-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tempfile = { workspace = true }
lovely-db = { path = "../lovely-db" }
