[package]
name = "lovely-tree"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
slotmap = { workspace = true }
smol_str = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
maud = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
default = []
render = ["dep:maud"]
