[package]
name = "lovely-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
axum-htmx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
maud = { workspace = true }
oauth2 = { workspace = true }
argon2 = { workspace = true }
totp-rs = { workspace = true }
qrcode = { workspace = true }
jsonwebtoken = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-sqlx-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
url = "2"
sqlx = { workspace = true }

lovely-db = { path = "../lovely-db" }
lovely-tree = { path = "../lovely-tree", features = ["render"] }

[dev-dependencies]
scraper = { workspace = true }
tempfile = { workspace = true }
lovely-test-support = { path = "../lovely-test-support" }
